feat(authorization): 扩展 OAuth2 客户端与响应式令牌认证 (#367)
* feat(oauth2)!: 扩展客户端认证与凭证授权

增加响应式客户端认证 SPI，并按已认证客户端类型路由 client_credentials 授权处理器。

保留历史构造器和自定义 granter 覆盖行为，补充真实 WebFlux HTTP 集成测试。

BREAKING CHANGE: /oauth2/token 不再向 granter 或 handler 传递 client_secret，旧扩展需迁移到客户端认证器。

* docs(oauth2): 回填客户端认证交付信息

* feat(authorization): 扩展响应式令牌认证

增加按令牌类型唯一调度的响应式认证 Provider，并保留既有有状态用户令牌与第三方权限加载链路。

固定响应式 Token Parser 的执行顺序，补充无回退、重复类型及旧链兼容测试。

* fix(authorization): 补齐 EasyORM 测试依赖

为 authorization-basic 的 EasyORM 测试装配增加 PostgreSQL R2DBC 测试依赖，避免方言初始化时缺少 PostgresqlObjectId。

保持依赖仅作用于测试 classpath，并回填 CI 同范围验证结果。

* feat(oauth2): 支持可信客户端类型配置

将服务端配置的 clientType 传播到认证上下文和授权处理器，并保持脱敏客户端视图一致。

为 OAuth2 客户端实体增加兼容旧表和旧更新请求的可空持久化字段，补充 HTTP 与实体契约测试。

* fix(crud): 修正 EasyORM 驱动依赖边界

* fix(oauth2): 兼容组件扫描下的客户端认证

* feat(oauth2): 扩展客户端认证编排

* feat(oauth2): 标准化令牌响应与客户端认证结果

补齐标准 token_type 和可选 scope 响应，并在客户端认证结果中传播已验证的认证方法。

保留既有构造器和授权流程兼容性，补充 DTO、认证 Provider 与真实 WebFlux 端点测试。